NOSONAR, and some IntelliJ IDEA fixes
code style refactoring #366